--- a/DataStructuresGROUP/DataStructuresGROUP/DataStructuresGROUP.csproj
+++ b/DataStructuresGROUP/DataStructuresGROUP/DataStructuresGROUP.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{456C8A03-5046-497C-A39E-80061F2F74A8}</ProjectGuid>
+    <ProjectGuid>{CFA74C79-14B9-4BF3-81E3-F691B26188C2}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleApplication6</RootNamespace>
-    <AssemblyName>ConsoleApplication6</AssemblyName>
+    <RootNamespace>DataStructuresGROUP</RootNamespace>
+    <AssemblyName>DataStructuresGROUP</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="C#DataStructures.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
